gerador_roteiros/tests/testfiles/0.9.0/rngvalidation/invalid/info_com_outros_icones.mm
<map version="0.9.0">
<!-- To view this file, download free mind mapping software FreeMind from http://freemind.sourceforge.net -->
<node CREATED="1346673934570" ID="ID_1037783247" MODIFIED="1346673939315" TEXT="MM">
<node CREATED="1346673940139" ID="ID_875515428" MODIFIED="1346675520216" POSITION="right" TEXT="UC: UC1&#xa;Requisitos: REQ001&#xa;Pr&#xe9;-condi&#xe7;&#xf5;es: PRe1&#xa;P&#xf3;s-condi&#xe7;&#xf5;es: POS1">
<node CREATED="1346673968108" ID="ID_628443034" MODIFIED="1346675542130" TEXT="Sequ&#xea;ncia: 1&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: PASSO 1&#xa;">
<node CREATED="1346675577540" ID="ID_1056450383" MODIFIED="1346675596944" TEXT="INFO1">
<icon BUILTIN="info"/>
<icon BUILTIN="full-9"/>
<icon BUILTIN="prepare"/>
<icon BUILTIN="messagebox_warning"/>
<icon BUILTIN="help"/>
<node CREATED="1346675582277" ID="ID_562535968" MODIFIED="1346675590786" TEXT="Sequ&#xea;ncia: 2&#xa;Ator: Usu&#xe1;rio&#xa;A&#xe7;&#xe3;o: PASSO 2"/>
</node>
</node>
</node>
</node>
</map>
